[metadata]
name = shared
version = file: VERSION
url = https://github.com/pyrustic/shared
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Shared data for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    json
    data
    shared
    binary
    database
    configuration
    collections
    persistence
    pyrustic
    lightweight
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    probed
    
[options.entry_points]
console_scripts =
    shared = shared.__main__:main
