[metadata]
name = shared
version = file: VERSION
url = https://github.com/pyrustic/shared
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Triptych for data exchange and persistence
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    json
    sql
    sqlite
    data
    shared
    binary
    database
    triptych
    configuration
    collections
    persistence
    pyrustic
    lightweight
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
    
[options.entry_points]
console_scripts =
    shared = shared.__main__:main
